--- a/lesson5/1-2/style.css
+++ b/lesson5/1-2/style.css
@@ -1,12 +1,17 @@
 .chess-board {
     border-spacing: 0;
-
+    text-align: center;
 }
 
 .col {
     width: 50px;
     height: 50px;
     border: 1px solid #333;
+    background-color: #FFE5A0;
+}
+
+.col-dark{
+    background-color: gray;
 }
 
 .row {
@@ -16,15 +21,21 @@
 .row-header{
    background-color: #FFE5A0;
     width: 20px;
+    font-weight: 800;
 }
 
 .col-header {
     height: 20px;
     background-color: #FFE5A0;
+    font-weight: 800;
 }
 
 .col-blank {
     background-color: #FFE5A0;
+}
+
+.color-white {
+    color: white;
 }
 
 
