--- a/lesson5/1-2/style.css
+++ b/lesson5/1-2/style.css
@@ -5,14 +5,14 @@
     border-collapse: collapse;
 }
 
-.col {
+.cell {
     width: 50px;
     height: 50px;
     border: 1px solid #333;
     background-color: #FFE5A0;
 }
 
-.col-dark{
+.cell-dark{
     background-color: gray;
 }
 
@@ -34,7 +34,7 @@
     border: 1px solid #333;
 }
 
-.col-blank {
+.cell-blank {
     background-color: #FFE5A0;
 }
 
